Java-Angular-Postgres-Nginx/angular.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
  namespace: java-angular  
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: angular-container
        image: gerrome/java-angular-stack_frontend:1
        imagePullPolicy: Always
        ports:
          - containerPort: 80        

---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: java-angular  
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
