Java-Angular-Postgres-Nginx/java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  namespace: java-angular  
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: java-container
        image: gerrome/java-angular-stack_backend:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-service
  namespace: java-angular  
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 8080
