Java-Angular-Postgres-Nginx/postgres.yml
apiVersion: v1
kind: Service 
metadata:
  name: db
  namespace: java-angular  
  labels:
    app: db  
spec:
   selector:
      app: db
   ports:
    - protocol: TCP   
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: java-angular  
spec:
   serviceName: db
   replicas: 1
   selector:
    matchLabels:
      app: db
   template:
    metadata:
      labels:
        app: db
        selector: db
    spec:
      containers:
        - name: postgres-container
          image: postgres:12.12-alpine
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
